Challenges/Challange4/ingress/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/poi/(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: poi
            port: 
              number: 80
      - path: /api/trips/(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: poi
            port: 
              number: 80
      - path: /api/user-java/(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-java
            port: 
              number: 80
      - path: /api/userprofile/(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile
            port: 
              number: 80
